# ls-runner

experimental/users/jjwatt/configs-with-jsonnet-and-bazel/: .bazelrc  WORKSPACE  WORKSPACE-with-cpp-jsonnet.bazel  WORKSPACE-with-rules_docker.bazel  env.json  maintf.jsonnet  use_cpp_ws  use_go_ws
experimental/users/jjwatt/configs-with-jsonnet-and-bazel/jsonnet/: BUILD
experimental/users/jjwatt/configs-with-jsonnet-and-bazel/sls/: BUILD  slsread.py
experimental/users/jjwatt/localstack-lambdas/: .gitignore  NOTES.md  aws.envrc  dot-aws-config
experimental/users/jjwatt/localstack-lambdas/go-lambda-simple/: go.mod
experimental/users/jjwatt/localstack-lambdas/go-lambda-simple/terraform/: outputs.tf  var.tf
experimental/users/jjwatt/localstack-lambdas/goplay/hello-go/: go.mod  main.go
experimental/users/jjwatt/localstack-lambdas/js-lambda-simple/: Makefile
experimental/users/jjwatt/localstack-lambdas/js-lambda-simple/terraform/: Makefile
experimental/users/jjwatt/localstack-lambdas/localstack-runner/: Makefile  aws.envrc  build-files.jsonnet  docker-compose.orig.yml  laws  localstack-runner.json  localstack.envrc  oldlaws  provider.tf.json  test.jsonnet
experimental/users/jjwatt/localstack-lambdas/localstack-runner/lib/: aws.libsonnet  docker-compose.libsonnet  laws.libsonnet  localstack-runner.libsonnet  localstack.libsonnet  terraform.libsonnet  util.libsonnet
experimental/users/jjwatt/localstack-lambdas/localstack-runner/test/docker-compose-with-localstack/: docker-compose.yml  laws  run-docker-compose.bats
experimental/users/jjwatt/localstack-lambdas/localstack-runner/test/js-lambda-simple/: js-lambda-simple.json
experimental/users/jjwatt/localstack-lambdas/localstack-runner/test/js-lambda-simple/src/: main.js
(+2 files in other folders)
